swagger routes added
